--- a/Marigold/MarigoldSystem/MarigoldSystem.csproj
+++ b/Marigold/MarigoldSystem/MarigoldSystem.csproj
@@ -56,6 +56,7 @@
     <Compile Include="BLL\CrewController.cs" />
     <Compile Include="BLL\EmployeeController.cs" />
     <Compile Include="BLL\FleetController.cs" />
+    <Compile Include="BLL\RouteController.cs" />
     <Compile Include="DAL\MarigoldSystemContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
